# wifi-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/plans/: 2025-01-30-network-device-mapper-design.md  2025-01-30-network-device-mapper-impl.md  2026-01-22-wifi-analyzer-design.md
scripts/: wifi_connect.swift  wifi_current.swift  wifi_scan.swift
src/: app.rs  connection.rs  db.rs  event.rs  ip.rs  lib.rs  main.rs  speedtest.rs  theme.rs  tui.rs
src/components/: detail_panel.rs  device_detail.rs  device_table.rs  mod.rs  network_table.rs  signal_chart.rs  status_bar.rs
src/network_map/: discovery.rs  identify.rs  mod.rs  oui.rs  port_scan.rs  types.rs
src/scanner/: mod.rs  platform.rs
src/scoring/: factors.rs  mod.rs
